@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Image.cxx,v 1.5.2.3.2.23 2002/08/09 01:09:49 easysw Exp $"
+// "$Id: Fl_Image.cxx,v 1.5.2.3.2.24 2002/10/11 13:54:10 easysw Exp $"
 //
 // Image drawing code for the Fast Light Tool Kit (FLTK).
 //
@@ -142,6 +142,7 @@ Fl_Image *Fl_RGB_Image::copy(int W, int H) {
       !w() || !h() || !d() || !array) {
     return new Fl_RGB_Image(array, w(), h(), d(), ld());
   }
+  if (W <= 0 || H <= 0) return 0;
 
   // OK, need to resize the image data; allocate memory and 
   Fl_RGB_Image	*new_image;	// New RGB image
@@ -391,5 +392,5 @@ void Fl_RGB_Image::label(Fl_Menu_Item* m) {
 
 
 //
-// End of "$Id: Fl_Image.cxx,v 1.5.2.3.2.23 2002/08/09 01:09:49 easysw Exp $".
+// End of "$Id: Fl_Image.cxx,v 1.5.2.3.2.24 2002/10/11 13:54:10 easysw Exp $".
 //
